--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iopcore-build",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "description": "A helper for common tasks to build iopcore modules'",
   "main": "index.js",
   "scripts": {
@@ -8,10 +8,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/bitpay/bitcore-build"
+    "url": "git://github.com/hendry19901990/iopcore-build"
   },
   "keywords": [
-    "iopcore"
+    "iop",
+    "iopcore",
+    "bitcoin"
   ],
   "contributors": [
     {
